--- a/assets/styles/scroller.scss
+++ b/assets/styles/scroller.scss
@@ -15,7 +15,7 @@
     top: 0;
     bottom: 0;
     width: 1px;
-    background-color: #374151;
+    background-color: #777777;
     transform: translateX(-50%);
   }
 
@@ -24,7 +24,7 @@
     left: 50%;
     top: 0;
     width: 1px;
-    background-color: #eab308;
+    background-color: #EAC666;
     transform: translateX(-50%);
     transition: height 0.3s ease;
     height: 0;
@@ -48,11 +48,11 @@
 
     &:hover {
       .scroll-nav__label {
-        color: #fbbf24;
+        color: #EAC666;
       }
       
       .scroll-nav__dot {
-        border-color: #fbbf24;
+        border-color: #EAC666;
       }
     }
 
@@ -63,7 +63,7 @@
       }
       
       .scroll-nav__dot {
-        right: 22px;
+        right: 23px;
       }
     }
 
@@ -73,15 +73,15 @@
       }
       
       .scroll-nav__dot {
-        top: 18px;
-        right: 27px;
+        top: 15px;
+        right: 29px;
       }
     }
   }
 
   &__label {
     font-size: 0.875rem;
-    color: #9ca3af;
+    color: #777777;
     position: relative;
     right: 22px;
     transition: color 0.3s ease;
@@ -101,8 +101,8 @@
     position: relative;
 
     &--active {
-      border-color: #eab308;
-      background-color: #eab308;
+      border-color: #EAC666;
+      background-color: #EAC666;
     }
   }
 }
