--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -285,7 +285,7 @@ header nav img {
 #animated-hero-image {
   position: absolute;
   animation: slideIn 0.5s ease-in-out forwards;
-  left: 0;
+  left: -20px;
   width: 85%;
   z-index: 1;
 }
