--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -317,7 +317,7 @@ header {
 #animated-hero-image {
   position: absolute;
   animation: slideIn 0.5s ease-in-out forwards;
-  left: 0;
+  left: -20px;
   width: 85%;
   z-index: $z-animated;
 }
