--- a/assets/styles/scroller.css
+++ b/assets/styles/scroller.css
@@ -100,3 +100,9 @@
   border-color: #EAC666;
   background-color: #EAC666;
 }
+
+@media (max-width: 1919px) {
+  .scroll-nav {
+    right: 0rem;
+  }
+}
