--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -138,6 +138,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: url('../images/formula-bottom.svg');
+  background-repeat: no-repeat;
+  background-position: 110% 112%;
+  background-size: 1000px;
 }
 
 // Main Layout
@@ -362,6 +366,7 @@ header {
     flex: 1;
     display: flex;
     align-items: flex-end;
+    justify-content: center;
     width: fit-content;
     margin-left: -6.25rem;
 
@@ -376,7 +381,6 @@ header {
     }
   }
 }
-
 // Featured Products Section
 #featured-products {
   margin-top: 0;
@@ -385,9 +389,7 @@ header {
   align-items: center;
   position: relative;
   z-index: $z-featured;
-  background: url('../images/formula-bottom.svg') no-repeat 45vw 45vh / 120%;
   width: 100%;
-
   .featured-products-content {
     max-width: 1536px;
     width: 100%;
@@ -492,6 +494,7 @@ header {
     z-index: 5;
     top: $spacing-scroller-top;
     position: relative;
+    left: 4rem
 
     img {
       position: relative;
@@ -523,6 +526,10 @@ header {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+  .scroller, #featured-products{
+    position: relative;
+    left: 1rem;
+  }
   header{
     max-width: 100%;
     padding-left: 2rem;
@@ -539,10 +546,10 @@ header {
   }
 }
 @media(max-width: 1650px){
-  .info .coins{
-    position: relative;
-    left: -5rem;
+  #animated-hero-image {
+    width: 95%;
   }
+
   #coin-silver{
     width: 176px!important;
   }
